--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "quick-temp": "^0.1.2",
     "rsvp": "^3.0.14",
     "lodash": "^2.4.1",
-    "mkdirp": "^0.5.0"
+    "mkdirp": "^0.5.0",
+    "broccoli-kitchen-sink-helpers": "^0.2.5"
   },
   "devDependencies": {
     "jshint": "^2.4.4"
