--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
   },
   "homepage": "https://github.com/caleb/broccoli-fast-browserify",
   "dependencies": {
+    "broccoli-kitchen-sink-helpers": "^0.2.5",
     "browserify": "^7.0.0",
-    "walk-sync": "^0.1.3",
-    "quick-temp": "^0.1.2",
-    "rsvp": "^3.0.14",
+    "glob": "^4.3.1",
     "lodash": "^2.4.1",
     "mkdirp": "^0.5.0",
-    "broccoli-kitchen-sink-helpers": "^0.2.5"
+    "quick-temp": "^0.1.2",
+    "rsvp": "^3.0.14",
+    "walk-sync": "^0.1.3"
   },
   "devDependencies": {
+    "broccoli": "^0.13.3",
+    "broccoli-merge-trees": "^0.2.1",
     "jshint": "^2.4.4"
   }
 }
