--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "walk-sync": "^0.1.3"
   },
   "devDependencies": {
+    "babelify": "^5.0.4",
     "broccoli": "^0.13.3",
     "broccoli-merge-trees": "^0.2.1",
     "copy-dereference": "^1.0.0",
